﻿IMPROVEMENTS / FIXES
- General:
	- Adjust how PartsBlacklist.cfg is read/written to merge the defaults with any existing custom values.
- UI:
	- Add a toolbar button for the BDA Vessel Mover.
	- Make window states persistent across scene changes.

v1.5.9.0
IMPROVEMENTS / FIXES
- General:
	- Blacklist the PotatoRoid due to it not having a valid prefab (they get procedurally generated) and causing NREs.
	- Add try-catch around setting the gear action group due to the FSM sometimes breaking it and breaking pilot initialisation.
	- Remove HP rounding and lower HP limit for MM-patched parts. Apply health modifier after applying rounding and lower HP limit for non-MM-patched parts.
	- Add Infinite Propellant and Infinite Electricity Gamemode toggles to BDA settings menu.
	- Some minor debug message cleanup.
	- Updated German localisation from EzBro.
	- Add Vessel Mover functionality directly in BDA:
		- Spawning:
			- Choice of classic or custom vessel selection:
				- Classic is the built-in vessel selection window (slow to load, but gives more details).
				- Custom is faster and remembers the scroll position.
			- Crew selection (optional):
				- The chosen crew are added to the spawned vessel in the order selected, up to the capacity of the vessel.
				- If the "Fill Seats" option in the Vessel Spawner window is set to "Minimal", then only the selected crew are used, otherwise the remaining crew slots are filled with random kerbals.
				- Option to create or remove kerbals from the roster (excluding Jeb, Val, Bill and Bob).
			- Spawning uses BDA's spawning routines:
				- Corrects for badly sorted part trees in craft files.
				- Mostly fixes staging sequences (some parts, such as parachutes, still don't stage properly).
				- Aligns craft with terrain/scenery normals based on control point orientation and facility the craft was built in.
				- Default spawn orientation matches that of the KSC runway or launchpad, depending on which facility the craft was built in.