@@ -1,6 +1,8 @@
 ﻿IMPROVEMENTS / FIXES
 - General:
 	- Adjust how PartsBlacklist.cfg is read/written to merge the defaults with any existing custom values.
+- Weapons:
+	- Use the combination of DEBUG_LINES and DEBUG_WEAPONS for showing the targeting component debug lines instead of only having them in the debug build.
 - UI:
 	- Add a toolbar button for the BDA Vessel Mover.
 	- Make window states persistent across scene changes.
